<resources>
    <string name="app_name">MyExample</string>
    <string name="allow_letters">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz\u0020</string>
    <string name="ele_letter_keys">ကခဂဃငစဆဇဈဉညဋဌဍဎဏတထဒဓနပဖဗဘမယရလဝသဟဠအေ ်   ိ  ္ ့  ံ ျ     ု  ဳ   ူ  ဴ  း  ၚ ွ  ီ ြ  ၤ   ဲ    ွ်   ၽႊ  ႏ  ၽြ    ႊ  ႈ  ဥ  ဧ ၿ   ၾ      ၌ ဋ ႑ ဍ   ၨ    ၳ  ၡ    ႅ   ၻ  ဉ    ဎ  ၺ  ႎ   ႍ `ါ  ႄ      ၶ    ၦ    ၱ   ၷ  ၼ  ဤ   ၸ    ၠ ၍ ႆ  ၥ ၮ   ၎ ဩ   ႀ      ဦ   ၢ႐ ဪ  ႁ    ႂ     ၯ  ၩ ၏ ာ\u0020</string>
    <string name="kyats">MMK</string>
    <string name="input_fields">Input Fields</string>
    <string name="popup_type">Types of Popup</string>
    <string name="custom_toast_type">Types of Toast</string>
    <string name="custom_searchview_type">SearchView</string>
    <string name="custom_webview_type">WebView</string>
    <string name="custom_google_autocomplete">Google AutoComplete</string>
    <string name="custom_camera_type">Face Detection Camera</string>
    <string name="custom_flash_type">Camera Flash</string>

    <!--popup string-->
    <string name="simple_popup">Simple Default Popup</string>
    <string name="custom_popup">Custom Popup</string>
    <string name="common_popup">Common Popup</string>
    <string name="common_popup_list">Common Popup with RecyclerView</string>
    <string name="common_popup_inputfield">Common Popup with InputField</string>
    <string name="common_popup_checkbox">Common Popup with CheckBox</string>

    <string name="title_input_field">Input Fields</string>
    <string name="title_popup">Popup Types</string>
    <string name="title_toast">Toast Types</string>
    <string name="title_menu">Menu Option</string>
    <string name="title_checkbox">Material CheckBox</string>
    <string name="title_webview">WebView</string>
    <string name="title_facecamera">Face Detection Camera</string>
    <string name="title_radiobox">Material Radio Button</string>
    <string name="title_toggle">Material Toggle Button</string>
    <string name="title_simple_list">Simple List</string>
    <string name="title_flash_camera">Camera Flash</string>
    <string name="title_front_flash">Front Flash </string>
    <string name="title_back_flash">Back Flash </string>

    <!--alert string-->
    <string name="alert_title">Alert Dialog</string>
    <string name="alert_list_title">Alert Dialog with List</string>
    <string name="alert_message">This is a Alert Message</string>
    <string name="alert_message2">Next Message</string>
    <string name="ok_text">Ok</string>
    <string name="cancel_text">Cancel</string>
    <string name="set_text">Set</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="select_values">Selected</string>

    <!--business holiday list-->
    <string name="full_moon_day_of_waso">Full Moon Day of Waso</string>
    <string name="martyrs_day">Martyrs\'s Day</string>
    <string name="full_moon_day_of_thadingyut">Full Moon of Thadingyut</string>
    <string name="full_moon_day_of_tazaungmone">Full Moon of Tazaungmone</string>
    <string name="national_holiday">National Holiday</string>
    <string name="kayin_new_year">Kayin New Year</string>
    <string name="christmas_day">Christmas Day</string>

    <!--toast-->
    <string name="simple_custom_toast">Simple Custom Toast</string>
    <string name="custom_design_toast">Customized Toast</string>
    <string name="time_toast">Custom Duration Toast</string>
    <string name="animate_toast">Custom Animation Toast</string>
    <string name="change_flag">Change Language</string>
    <string name="business_account">Merchant</string>
    <string name="personal_account">Personal</string>

    <!--search-->
    <string name="search_hint">Search here</string>

    <string name="photo_msg">Please take a clear selfie. We will use this photo for OK $ account security.</string>
    <string name="no_face_detected_more">No face detected. Required Face. please press capture button one more time to click your picture</string>
    <string name="no_face_detected">OK $ account opening require to your face detection.</string>
    <string name="more_face">"More than 1 faces are there Please take only your face "</string>
    <string name="error_camera">Camera Error, Please try again</string>
    <string name="camera_permission_error">	\ud83d\udcf7 Camera Permission Error\n OK $ app doesn\'t have camera access. Please go to settings and allow all permissions for security reasons If you denied any permission please uninstall app and install again. Make sure next time allow all permission</string>

    <string name="place_autocomplete_key">AIzaSyBQFs9iTrFxeMaqAVsAFz7782YnN1e5rIQ</string>
    <string name="error_autocomplete">Error getting autocomplete prediction API call: </string>
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="autocomplete_hint">Enter place name or address</string>
    <string name="selected_place">Last Selected Place:</string>
    <string name="clear_text">Clear Text</string>
    <string name="permdesc_flashlight">Flash</string>
</resources>
