<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/appBackcolor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- default popup -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple"
            android:clickable="true"
            app:cardCornerRadius="@dimen/margin_2"
            app:cardElevation="@dimen/margin_5">

            <TextView
                android:id="@+id/tv_first_popup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:padding="@dimen/margin_15"
                android:text="@string/simple_popup"
                android:textSize="@dimen/font_16" />

        </android.support.v7.widget.CardView>

        <!-- custom popup -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            app:cardCornerRadius="@dimen/margin_2"
            android:background="@drawable/ripple"
            android:clickable="true"
            app:cardElevation="@dimen/margin_5">

            <TextView
                android:id="@+id/tv_second_popup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_15"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:text="@string/custom_popup"
                android:textSize="@dimen/font_16" />

        </android.support.v7.widget.CardView>

        <!-- common popup -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            app:cardCornerRadius="@dimen/margin_2"
            android:background="@drawable/ripple"
            android:clickable="true"
            app:cardElevation="@dimen/margin_5">

            <TextView
                android:id="@+id/tv_third_popup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_15"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:text="@string/common_popup"
                android:textSize="@dimen/font_16" />

        </android.support.v7.widget.CardView>

        <!-- common popup with recyclerview -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            app:cardCornerRadius="@dimen/margin_2"
            android:background="@drawable/ripple"
            android:clickable="true"
            app:cardElevation="@dimen/margin_5">

            <TextView
                android:id="@+id/tv_fourth_popup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_15"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:text="@string/common_popup_list"
                android:textSize="@dimen/font_16" />

        </android.support.v7.widget.CardView>

        <!-- common popup with input field -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            app:cardCornerRadius="@dimen/margin_2"
            android:background="@drawable/ripple"
            android:clickable="true"
            android:layout_marginBottom="@dimen/margin_10"
            app:cardElevation="@dimen/margin_5">

            <TextView
                android:id="@+id/tv_fifth_popup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_15"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:text="@string/common_popup_inputfield"
                android:textSize="@dimen/font_16" />

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple"
        android:clickable="true"
        android:layout_gravity="bottom"
        app:cardCornerRadius="@dimen/margin_2"
        app:cardElevation="@dimen/margin_5">

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple"
            android:clickable="true"
            android:padding="@dimen/margin_15"
            android:text="@string/simple_popup"
            android:textSize="@dimen/font_16" />

    </android.support.v7.widget.CardView>

</LinearLayout>