<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackcolor"
    android:clickable="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_15"
        android:orientation="vertical">

        <!-- first option -->
        <android.support.v7.widget.CardView
            android:id="@+id/cardview_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:background="@drawable/ripple"
            android:clickable="true"
            app:cardCornerRadius="@dimen/margin_2"
            app:cardElevation="@dimen/margin_5">

            <TextView
                android:id="@+id/tv_first_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                android:padding="@dimen/margin_15"
                android:text="@string/input_fields"
                android:textSize="@dimen/font_16" />

        </android.support.v7.widget.CardView>

        <!-- second option -->
        <android.support.v7.widget.CardView
            android:id="@+id/cardview_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:animateLayoutChanges="true"
            android:background="@drawable/ripple"
            android:clickable="true"
            app:cardCornerRadius="@dimen/margin_2"
            app:cardElevation="@dimen/margin_5">

            <TextView
                android:id="@+id/tv_second_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                android:padding="@dimen/margin_15"
                android:text="@string/popup_type"
                android:textSize="@dimen/font_16" />

        </android.support.v7.widget.CardView>

        <!-- Third option -->
        <android.support.v7.widget.CardView
            android:id="@+id/cardview_third"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:animateLayoutChanges="true"
            android:background="@drawable/ripple"
            android:clickable="true"
            app:cardCornerRadius="@dimen/margin_2"
            app:cardElevation="@dimen/margin_5">

            <TextView
                android:id="@+id/tv_third_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                android:padding="@dimen/margin_15"
                android:text="@string/custom_toast_type"
                android:textSize="@dimen/font_16" />


        </android.support.v7.widget.CardView>

        <!-- Fourth option -->
        <android.support.v7.widget.CardView
            android:id="@+id/cardview_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:animateLayoutChanges="true"
            android:background="@drawable/ripple"
            android:clickable="true"
            app:cardCornerRadius="@dimen/margin_2"
            app:cardElevation="@dimen/margin_5">

            <TextView
                android:id="@+id/tv_four_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                android:padding="@dimen/margin_15"
                android:text="@string/custom_searchview_type"
                android:textSize="@dimen/font_16" />


        </android.support.v7.widget.CardView>

        <!-- Fourth option -->
        <android.support.v7.widget.CardView
            android:id="@+id/cardview_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:animateLayoutChanges="true"
            android:background="@drawable/ripple"
            android:clickable="true"
            app:cardCornerRadius="@dimen/margin_2"
            app:cardElevation="@dimen/margin_5">

            <TextView
                android:id="@+id/tv_five_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                android:padding="@dimen/margin_15"
                android:text="@string/custom_webview_type"
                android:textSize="@dimen/font_16" />


        </android.support.v7.widget.CardView>

    </LinearLayout>
</LinearLayout>