<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/toolbar_common"></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/search_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/clear"
                    android:background="@null"
                    android:drawableLeft="@drawable/places_ic_search"
                    android:drawablePadding="@dimen/margin_10"
                    android:hint="Search"
                    android:imeOptions="actionSearch"
                    android:paddingLeft="@dimen/margin_10"
                    android:paddingRight="@dimen/margin_10"
                    android:singleLine="true" />

                <ImageView
                    android:id="@+id/clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right|center_vertical"
                    android:padding="@dimen/margin_10"
                    android:src="@drawable/places_ic_clear"
                    android:visibility="gone" />
            </RelativeLayout>


        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/powered_by_google"
            android:layout_below="@+id/search_layout"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@color/white" />

        <ImageView
            android:id="@+id/powered_by_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_10"
            android:padding="@dimen/margin_10"
            android:src="@drawable/powered_by_google_light" />
    </RelativeLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_15"
            android:paddingLeft="@dimen/margin_15"
            android:paddingRight="@dimen/margin_15"
            android:paddingTop="@dimen/margin_15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/custom_google_autocomplete"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <AutoCompleteTextView
                android:id="@+id/autocomplete_places"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_20"
                android:hint="@string/autocomplete_hint"
                android:singleLine="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:src="@drawable/powered_by_google_light" />

            <Button
                android:id="@+id/button_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/clear_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selected_place"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/place_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/place_attribution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:paddingTop="@dimen/margin_20"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>