<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackcolor"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--type layout-->
        <FrameLayout
            android:id="@+id/frame_message_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:visibility="visible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--alert title text-->
                <LinearLayout
                    android:id="@+id/ll_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_alert_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                         />

                    <TextView
                        android:id="@+id/tv_alert_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center"
                        android:padding="@dimen/margin_15"
                        android:text="@string/alert_title"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_18" />



                </LinearLayout>

                <View
                    android:id="@+id/view_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/ll_title"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorPrimary"></View>

                <Space
                    android:id="@+id/spacer"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_5"
                    android:layout_below="@+id/view_line" />

                <!--message Layout-->
                <LinearLayout
                    android:id="@+id/ll_enteramt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/spacer"
                    android:layout_marginBottom="@dimen/margin_15"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/tv_note_header1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/view_noteline"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="1dp"
                        android:drawableTint="@color/dark_blue"
                        android:padding="7dp"
                        android:text="@string/alert_message"
                        android:textColor="@color/colorAccent"
                        android:textSize="13sp" />

                    <LinearLayout
                        android:id="@+id/ll_bullet_points"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_note_header1"
                        android:orientation="vertical"
                        android:paddingLeft="35dp"
                        android:paddingRight="10dp">

                        <TextView
                            android:id="@+id/tv_note_content1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_note_content1"
                            android:drawableTint="@color/dark_blue"
                            android:padding="2dp"
                            android:text="@string/alert_message"
                            android:textColor="@color/colorAccent"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/tv_note_content2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_note_content2"
                            android:drawableTint="@color/dark_blue"
                            android:padding="2dp"
                            android:text="@string/alert_message"
                            android:textColor="@color/colorAccent"
                            android:textSize="13sp" />

                    </LinearLayout>


                </LinearLayout>

            </RelativeLayout>

        </FrameLayout>

    </RelativeLayout>

    <!--bottom btn layout-->
    <LinearLayout
        android:id="@+id/ll_bottom_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_main_layout"
        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_blue_bg"
            android:gravity="center"
            android:text="@string/ok_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/font_16"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_blue_bg"
            android:gravity="center"
            android:text="@string/cancel_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/font_16"
            android:visibility="visible" />
    </LinearLayout>

</LinearLayout>